--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Jon Barron</title>
+    <title>Jungbin Cho</title>
 
-    <meta name="author" content="Jon Barron">
+    <meta name="author" content="Jungbin Cho">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -36,9 +36,15 @@
                   <a href="https://github.com/whwjdqls">Github</a>
                 </p>
               </td>
-              <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/jungbin_cho_2.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
-              </td>
+<td style="padding:2.5%;width:37%;max-width:37%;position:relative;">
+  <a href="images/jungbin_cho_2.jpg">
+    <img 
+      style="width:100%;max-width:100%;height:auto;aspect-ratio:1/1;object-fit:cover; border-radius:50%;" 
+      alt="profile photo" 
+      src="images/JonBarron.jpg" 
+      class="hoverZoomLink">
+  </a>
+</td>
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -168,7 +174,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Feel free to steal this website's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>. <strong>Do not</strong> scrape the HTML from this page itself, as it includes analytics tags that you do not want on your own website &mdash; use the github code instead. Also, consider using <a href="https://leonidk.com/">Leonid Keselman</a>'s <a href="https://github.com/leonidk/new_website">Jekyll fork</a> of this page.
+                  <a href="https://jonbarron.info/">Cool website by Jon Barron</a>
                 </p>
               </td>
             </tr>
