--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Jon Barron
+                  Jungbin Cho
                 </p>
                 <p>I'm a master student at <a href="https://www.yonsei.ac.kr/en_sc/">Yonsei University</a> advised by <a href="https://yj-yu.github.io/home/">Professor Yu</a> 
                 </p>
@@ -41,7 +41,7 @@
     <img 
       style="width:100%;max-width:100%;height:auto;aspect-ratio:1/1;object-fit:cover; border-radius:50%;" 
       alt="profile photo" 
-      src="images/JonBarron.jpg" 
+      src="images/jungbin_cho_2.jpg" 
       class="hoverZoomLink">
   </a>
 </td>
