--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/bd_promo.jpg" alt="blind-date" width="160" height="160">
+                <img src="images/DEEPTalk.jpg" alt="blind-date" width="160" height="160">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://drive.google.com/file/d/1PQjzKgFcrAesMIDJr-WDlCwuGUxZJZwO/view?usp=sharing">
                   <span class="papertitle">DEEPTalk: Dynamic Emotion Embedding for Probabilistic Speech-Driven 3D Face Animation</span>
                 </a>
                 <br>
-                <strong>Jungbin Cho</strong>, <a href="http://cosmo.nyu.edu/hogg/">David W. Hogg</a>, <a href="http://www.astro.princeton.edu/~dstn/">Dustin Lang</a>, <a href="http://cs.nyu.edu/~roweis/">Sam Roweis</a>
+                Jisoo Kim<sup>*</sup>, <strong>Jungbin Cho</strong><sup>*</sup>, Joonho Park, Soonmin Hwang, Da Eun Kim, Geon Kim, <a href="https://yj-yu.github.io/home/">Youngjae Yu</a>
                 <br>
                 <em>AAAI</em>, 2025
                 <p>Generating dynamic emotional talking faces using probabilistic embeddings and a temporally hiearchical motion tokenizer.</p>
