--- a/index.html
+++ b/index.html
@@ -91,10 +91,41 @@
               </td>
             </tr>
 
+            <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src="images/AVIN-Chat.jpg" alt="blind-date" width="160" height="160">
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <a href="https://arxiv.org/abs/2409.00012">
+                  <span class="papertitle">AVIN-Chat: An Audio-Visual Interactive Chatbot System with Emotional State Tuning</span>
+                </a>
+                Chanhyuk Park<sup>*</sup>, <strong>Jungbin Cho</strong><sup>*</sup>, Junwan Kim<sup>*</sup>, Seongmin Lee, Jungsu Kim, Sanghoon Lee
+                <br>
+                <em>IJCAI Demo</em>, 2024 
+                <p> A chatbot system designed for face-to-face interactions, featuring customizable virtual avatars for personalized conversations. </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src="images/VSCHH.jpg" alt="blind-date" width="160" height="160">
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <a href="https://openaccess.thecvf.com/content/ICCV2023W/RHWC/papers/Jang_VSCHH_2023_A_Benchmark_for_the_View_Synthesis_Challenge_of_ICCVW_2023_paper.pdf">
+                  <span class="papertitle">VSCHH 2023: A Benchmark for the View Synthesis Challenge of Human Heads</span>
+                </a>
+                <br>
+                Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho<strong>, Dosik Hwang, ..., Stefanos Zafeiriou
+                <br>
+                <em>ICCV Workshop</em>, 2023
+                <p> Reconstructing high resolution 3D human heads from sparse input views. </p>
+              </td>
+            </tr>
+		  
           </tbody></table>
 
           
-					<table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;"><tbody>
+		<table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;"><tbody>
             <tr>
               <td>
                 <h2>Miscellanea</h2>
