--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </p>
               </td>
 <td style="padding:2.5%;width:37%;max-width:37%;position:relative;">
-  <a href="images/jungbin_cho_2.jpg">
+  <a href="images/Jungbin_cho_2.jpg">
     <img 
       style="width:100%;max-width:100%;height:auto;aspect-ratio:1/1;object-fit:cover;" 
       alt="profile photo" 
-      src="images/jungbin_cho_2.jpg" 
+      src="images/Jungbin_cho_2.jpg" 
       class="hoverZoomLink">
   </a>
 </td>
