--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <span class="papertitle">VSCHH 2023: A Benchmark for the View Synthesis Challenge of Human Heads</span>
                 </a>
                 <br>
-                Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho<strong>, Dosik Hwang, ..., Stefanos Zafeiriou
+                Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho</strong>strong>, Dosik Hwang, ..., Stefanos Zafeiriou
                 <br>
                 <em>ICCV Workshop</em>, 2023
                 <p> Reconstructing high resolution 3D human heads from sparse input views. </p>
@@ -126,7 +126,7 @@
 
           
 		<table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;"><tbody>
-            <tr>
+<!--             <tr>
               <td>
                 <h2>Miscellanea</h2>
               </td>
@@ -211,7 +211,7 @@
                 <br>
                 <a href="http://aima.cs.berkeley.edu/">Figures, "Artificial Intelligence: A Modern Approach", 3rd Edition</a>
               </td>
-            </tr>
+            </tr> -->
             
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
