--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <span class="papertitle">VSCHH 2023: A Benchmark for the View Synthesis Challenge of Human Heads</span>
                 </a>
                 <br>
-                Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho</strong>strong>, Dosik Hwang, ..., Stefanos Zafeiriou
+                Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho</strong>, Dosik Hwang, ..., Stefanos Zafeiriou
                 <br>
                 <em>ICCV Workshop</em>, 2023
                 <p> Reconstructing high resolution 3D human heads from sparse input views. </p>
