--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <td style="padding:2.5%;width:37%;max-width:37%;position:relative;">
   <a href="images/Jungbin_cho_2.png">
     <img 
-      style="width:100%;max-width:100%;height:auto;aspect-ratio:1/1;object-fit:cover;" 
+      style="width:100%; height:auto; object-fit:contain;" 
       alt="profile photo" 
       src="images/Jungbin_cho_2.png" 
       class="hoverZoomLink">
@@ -99,6 +99,7 @@
                 <a href="https://arxiv.org/abs/2409.00012">
                   <span class="papertitle">AVIN-Chat: An Audio-Visual Interactive Chatbot System with Emotional State Tuning</span>
                 </a>
+		<br>
                 Chanhyuk Park<sup>*</sup>, <strong>Jungbin Cho</strong><sup>*</sup>, Junwan Kim<sup>*</sup>, Seongmin Lee, Jungsu Kim, Sanghoon Lee
                 <br>
                 <em>IJCAI Demo</em>, 2024 
