--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table style="width:100%;max-width:800px;border:0px;borde-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -61,7 +61,7 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/Discord.jpg" alt="blind-date" width="160" height="160">
+                <img src="images/DisCoRD.png" alt="blind-date" width="160" height="160">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2411.19527">
@@ -77,7 +77,7 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/DEEPTalk.jpg" alt="blind-date" width="160" height="160">
+                <img src="images/DEEPTalk.png" alt="blind-date" width="160" height="160">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2408.06010">
@@ -93,7 +93,7 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/AVIN-Chat.jpg" alt="blind-date" width="160" height="160">
+                <img src="images/AVIN-Chat.png" alt="blind-date" width="160" height="160">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2409.00012">
@@ -109,7 +109,7 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/VSCHH.jpg" alt="blind-date" width="160" height="160">
+                <img src="images/VSCHH.png" alt="blind-date" width="160" height="160">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://openaccess.thecvf.com/content/ICCV2023W/RHWC/papers/Jang_VSCHH_2023_A_Benchmark_for_the_View_Synthesis_Challenge_of_ICCVW_2023_paper.pdf">
