--- a/index.html
+++ b/index.html
@@ -57,27 +57,8 @@
               </td>
             </tr>
           </tbody></table>
-<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
-  <tbody>
-    <tr>
-      <td style="width:20%;vertical-align:middle">
-        <img src="images/Discord.png" alt="DisCoRD" />
-      </td>
-      <td style="width:80%;vertical-align:middle">
-        <a href="https://arxiv.org/abs/2411.19527">
-          <span class="papertitle">DisCoRD: Discrete Tokens to Continuous Motion via Rectified Flow Decoding</span>
-        </a>
-        <br>
-        <strong>Jungbin Cho</strong><sup>*</sup>, Junwan Kim<sup>*</sup>, Jisoo Kim, Minseo Kim, Mingu Kang, 
-        <a href="https://www.csehong.com/">Sungeun Hong</a>, 
-        <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>, 
-        <a href="https://yj-yu.github.io/home/">Youngjae Yu</a>
-        <br>
-        <em>Preprint</em>
-        <p>Generating smooth and natural motion by decoding discrete motion tokens with rectified flow.</p>
-      </td>
-    </tr>
-<!--           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
@@ -93,7 +74,7 @@
                 <em>Preprint</em>
                 <p> Generating smooth and natural motion by decoding discrete motion tokens with rectified flow. </p>
               </td>
-            </tr> -->
+            </tr>
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
