--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-		 I work on 3D, 4D computer vision, generative models, and human motion. 
+		 My research interest centers on developing virtual environments and digital avatars that can seamlessly interact with humans. To achieve this, I am currently focusing on human motion generation, as well as human scene interaction.
                 </p>
               </td>
             </tr>
