--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </p>
               </td>
 <td style="padding:2.5%;width:37%;max-width:37%;position:relative;">
-  <a href="images/Jungbin_cho_2.png">
+  <a href="images/Jungbin_cho_3.jpg">
     <img 
       style="width:100%; height:auto; object-fit:contain;" 
       alt="profile photo" 
-      src="images/Jungbin_cho_2.png" 
+      src="images/Jungbin_cho_3.jpg" 
       class="hoverZoomLink">
   </a>
 </td>
