--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ My research interest centers on developing virtual environments and digital avat
                 <br>
                 <strong>Jungbin Cho</strong><sup>*</sup>, Junwan Kim<sup>*</sup>, Jisoo Kim, Minseo Kim, Mingu Kang, <a href="https://www.csehong.com/">Sungeun Hong</a> ,<a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>,<a href="https://yj-yu.github.io/home/">Youngjae Yu</a>
                 <br>
-                <em>Preprint</em>
+                <em>ICCV</em>, 2025
                 <p> Generating smooth and natural motion by decoding discrete motion tokens with rectified flow. </p>
               </td>
             </tr>
@@ -91,7 +91,23 @@ My research interest centers on developing virtual environments and digital avat
                 <p>Generating dynamic emotional talking faces using probabilistic embeddings and a temporally hiearchical motion tokenizer.</p>
               </td>
             </tr>
-
+		  
+            <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src="images/EgoSpeak.png" alt="blind-date" width="160" height="160">
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <a href="https://arxiv.org/abs/2408.06010">
+                  <span class="papertitle">EgoSpeak: Learning When to Speak for Egocentric Conversational Agents in the Wild</span>
+                </a>
+                <br>
+                Junhyeok Kim, Minsoo Kim, Jiwan Chung, <strong>Jungbin Cho</strong>, Jisoo Kim, Sungwoong Kim, Gyeongbo Sim, <a href="https://yj-yu.github.io/home/">Youngjae Yu</a>
+                <br>
+                <em>NAACL</em>, 2025 Findings
+                <p>Detecting when to speak.</p>
+              </td>
+            </tr>
+		  
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
                 <img src="images/AVIN-Chat.png" alt="blind-date" width="160" height="160">
