--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@
       class="hoverZoomLink">
   </a>
 </td>
-            </tr>
+</tr>
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr>
+    <td style="padding:16px;width:100%;vertical-align:middle">
+      <h2>News</h2>
+      <ul style="list-style-type: none; padding-left: 0; margin: 0;">
+        <li style="margin-bottom: 6px;">📍 <b>Aug 2025</b> — I will be visiting CMU as a visiting researcher.</li>
+        <li style="margin-bottom: 6px;">📝 <b>Jun 2025</b> — Our paper on motion token decoding is accepted to ICCV 2025.</li>
+      </ul>
+    </td>
+  </tr>
+</tbody></table>
+
+
+		  
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
@@ -94,7 +109,7 @@ My research interest centers on developing virtual environments and digital avat
 		  
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/EgoSpeak.png" alt="blind-date" width="160" height="160">
+               <img src="images/EgoSpeak.png" alt="blind-date" style="width: 160px; height: auto;">
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2408.06010">
