--- a/index.html
+++ b/index.html
@@ -68,21 +68,24 @@
               </tbody>
             </table> <!-- /header table -->
 
-            <!-- ───────────── News ───────────── -->
-            <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
-              <tbody>
-                <tr>
-                  <td style="padding:16px;">
-                    <h2>News</h2>
-                    <ul style="list-style-type:none;margin:0;padding-left:0;">
-                      <li style="margin-bottom:6px;">📍 <b>Aug 2025</b> — I will be visiting CMU as a visiting researcher.</li>
-                      <li style="margin-bottom:6px;">📝 <b>Jun 2025</b> — Our paper on motion token decoding is accepted to ICCV 2025.</li>
-                    </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-
+<!-- ───────────── News ───────────── -->
+<table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
+  <tbody>
+    <tr>
+      <td style="padding:16px;">
+        <h2>News</h2>
+        <ul style="list-style-type:none;margin:0;padding-left:0;">
+          <!-- 2025 -->
+          <li style="margin-bottom:6px;">📍 <b>Aug&nbsp;2025</b> — I will be joining CMU as a visiting researcher.</li>
+          <li style="margin-bottom:6px;">📝 <b>Jun&nbsp;2025</b> — Our paper on motion token decoding is accepted to ICCV&nbsp;2025.</li>
+          <!-- 2024 -->
+          <li style="margin-bottom:6px;">📝 <b>Dec&nbsp;2024</b> — Our paper on 3D human face animation accepted to AAAI&nbsp;2025.</li>
+          <li style="margin-bottom:6px;">🎓 <b>Sep&nbsp;2024</b> — I will be starting my master’s degree at Yonsei!</li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
             <!-- ───────────── Research interests ───────────── -->
             <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
               <tbody>
