--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                     <p class="name" style="text-align:center;">Jungbin Cho</p>
 
                     <p>
-                      I am a master student at
+                      I am a first-year Master’s student at
                       <a href="https://www.yonsei.ac.kr/en_sc/">Yonsei University</a>,
-                      <a href="https://mirlab.yonsei.ac.kr/">MIR Lab</a>, advised by
-                      <a href="https://yj-yu.github.io/home/">Professor Yu</a>.
+                      advised by
+                      <a href="https://yj-yu.github.io/home/">Professor Yu</a> in <a href="https://mirlab.yonsei.ac.kr/">MIR Lab</a>.
                       I received my B.S. in
                       <a href="https://yonsei.elsevierpure.com/en/organisations/department-of-electrical-and-electronic-engineering">
                         Electrical and Electronic Engineering
                       </a>
-                      at the same school.
+                      from Yonsei University as well.
                     </p>
 
                     <p style="text-align:center;">
@@ -93,9 +93,9 @@
                   <td style="padding:16px;">
                     <h2>Research</h2>
                     <p>
-                      My research interest centers on developing virtual environments and digital avatars that
-                      can seamlessly interact with humans. To achieve this, I am currently focusing on
-                      human motion generation, as well as human-scene and human-human interaction.
+I am interested in building realistic virtual environments and digital avatars that can interact with humans in intuitive and natural ways. 
+                      Toward this goal, I develop and refine methods in computer vision, computer graphics, and generative modeling.
+                      Recently, my work has focused on 3D human motion generation and understanding how humans interact with their surrounding scenes. 
                     </p>
                   </td>
                 </tr>
