--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ I am interested in building realistic virtual environments and digital avatars t
                 </tr>
               </tbody>
             </table>
+            <!-- 🌍 Visitor Globe Tracker -->
+            <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=7aICIrhe3ianncSpcGUuB-N19ad0-2iijPCJxVxdulM"></script>
 
           </td>
         </tr>
