--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@ I am interested in building realistic virtual environments and digital avatars t
               </tbody>
             </table>
             <!-- 🌍 Visitor Globe Tracker -->
+          <div style="width: 300px; margin: 50px auto 0 auto;">
             <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=7aICIrhe3ianncSpcGUuB-N19ad0-2iijPCJxVxdulM"></script>
+          </div>
 
           </td>
         </tr>
