--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <a href="https://www.csehong.com/">Sungeun Hong</a>,
                     <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>,
                     <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>
-                    <em>ICCV</em>, 2025
+                    <em>ICCV</em> 2025 (<strong><em>Highlight</em></strong>)
                     <p>Generating smooth and natural motion by decoding discrete motion tokens with rectified flow.</p>
                   </td>
                 </tr>
@@ -139,7 +139,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     Jisoo Kim<sup>*</sup>, <strong>Jungbin Cho</strong><sup>*</sup>, Joonho Park,
                     Soonmin Hwang, Da Eun Kim, Geon Kim,
                     <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>
-                    <em>AAAI</em>, 2025
+                    <em>AAAI</em> 2025
                     <p>Generating dynamic emotional talking faces using probabilistic embeddings and a temporally hierarchical motion tokenizer.</p>
                   </td>
                 </tr>
@@ -158,7 +158,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     Junhyeok Kim, Minsoo Kim, Jiwan Chung, <strong>Jungbin Cho</strong>,
                     Jisoo Kim, Sungwoong Kim, Gyeongbo Sim,
                     <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>
-                    <em>NAACL Findings</em>, 2025
+                    <em>NAACL Findings</em> 2025
                     <p>Detecting when to speak.</p>
                   </td>
                 </tr>
@@ -176,7 +176,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     </a><br>
                     Chanhyuk Park<sup>*</sup>, <strong>Jungbin Cho</strong><sup>*</sup>,
                     Junwan Kim<sup>*</sup>, Seongmin Lee, Jungsu Kim, Sanghoon Lee<br>
-                    <em>IJCAI Demo</em>, 2024
+                    <em>IJCAI Demo</em> 2024
                     <p>A chatbot system designed for face-to-face interactions, featuring customizable virtual avatars for personalized conversations.</p>
                   </td>
                 </tr>
@@ -194,7 +194,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     </a><br>
                     Youngkyoon Jang, ..., Hyeseong Kim, <strong>Jungbin Cho</strong>, Dosik Hwang,
                     ..., Stefanos Zafeiriou<br>
-                    <em>ICCV Workshop</em>, 2023
+                    <em>ICCV Workshop</em> 2023
                     <p>Reconstructing high-resolution 3D human heads from sparse input views.</p>
                   </td>
                 </tr>
