--- a/index.html
+++ b/index.html
@@ -216,10 +216,13 @@ I am interested in building realistic virtual environments and digital avatars t
               </tbody>
             </table>
             <!-- 🌍 Visitor Globe Tracker -->
-          <div style="width: 300px; margin: 50px auto 0 auto;">
+<!--           <div style="width: 300px; margin: 50px auto 0 auto;">
             <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=7aICIrhe3ianncSpcGUuB-N19ad0-2iijPCJxVxdulM"></script>
-          </div>
+          </div> -->
 
+             <div style="width: 300px; margin: 50px auto 0 auto;">
+            <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=i6ZNv3vJc-2hGXjAGkNz5Zen_NpKwT7kpk1t2ZhwWZo"></script>
+            </div> 
           </td>
         </tr>
       </tbody>
