--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@ I am interested in building realistic virtual environments and digital avatars t
             <!-- ───────────── Publications ───────────── -->
             <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:0 auto;">
               <tbody>
+                <!-- SceneAdapt -->
+                <tr>
+                  <td style="padding:16px;width:20%;vertical-align:middle;">
+                    <img src="images/scene-adapt.png" class="paper-img" alt="sceneadapt thumbnail">
+                  </td>
+                  <td style="padding:8px;width:80%;vertical-align:middle;">
+                    <!-- <a href="https://arxiv.org/abs/2411.19527"> -->
+                      <span class="papertitle">SceneAdapt: Scene-aware Adaptation of Human Motion Diffusion</span>
+                    </a><br>
+                    <strong>Jungbin Cho</strong><sup>*</sup>, Minsu Kim<sup>*</sup>,
+                    Jisoo Kim, Ce Zheng, Laszlo A. Jeni, Ming-Hsuan Yang, Youngjae Yu, Seonjoo Kim
+                    <em>preprint</em>
+                    <p>Adapting text-to-motion models to become scene-aware using only scene-motion paired data.</p>
+                  </td>
+                </tr>
 
                 <!-- DisCoRD -->
                 <tr>
