Update author links in index.html

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@ I am interested in building realistic virtual environments and digital avatars t
                     </a><br>
                     <strong>Jungbin Cho</strong><sup>*</sup>, Minsu Kim<sup>*</sup>,
                     Jisoo Kim,
-                  <a href="https://zczcwh.github.io/">Ce Zheng</a><br>,
-                  <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a><br>,
-              <a href="https://faculty.ucmerced.edu/mhyang/">Ming-Hsuan Yang</a><br>,
-              <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>, 
+                  <a href="https://zczcwh.github.io/">Ce Zheng</a>,
+                  <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a>,
+              <a href="https://faculty.ucmerced.edu/mhyang/">Ming-Hsuan Yang</a>,
+              <a href="https://yj-yu.github.io/home/">Youngjae Yu</a>, 
               <a href="https://sites.google.com/site/seonjookim/">Seonjoo Kim</a><br>
               
                     <em>preprint</em>
