--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ I am interested in building realistic virtual environments and digital avatars t
                     <a href="https://www.csehong.com/">Sungeun Hong</a>,
                     <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>,
                     <a href="https://yj-yu.github.io/home/">Youngjae Yu</a><br>
-                    <em>ICCV</em> 2025 (<strong><em>Highlight</em></strong>)
+                    <!-- <em>ICCV</em> 2025 (✨<strong><em>Highlight</em></strong>) -->
+                    <em>ICCV</em> 2025 (✨ <span class="highlight-background">Highlight</span>)
                     <p>Generating smooth and natural motion by decoding discrete motion tokens with rectified flow.</p>
                   </td>
                 </tr>
