--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ I am interested in building realistic virtual environments and digital avatars t
                     <img src="images/scene-adapt.png" class="paper-img" alt="sceneadapt thumbnail">
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle;">
-                    <!-- <a href="https://arxiv.org/abs/2411.19527"> -->
+                    <a href="https://sceneadapt.github.io/">
                       <span class="papertitle">SceneAdapt: Scene-aware Adaptation of Human Motion Diffusion</span>
                     </a><br>
                     <strong>Jungbin Cho</strong><sup>*</sup>, Minsu Kim<sup>*</sup>,
