Revise personal introduction in index.html
Updated personal information and added details about current studies.

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
                       I am a first-year Master’s student at
                       <a href="https://www.yonsei.ac.kr/en_sc/">Yonsei University</a>,
                       advised by
-                      <a href="https://yj-yu.github.io/home/">Professor Yu</a> in <a href="https://mirlab.yonsei.ac.kr/">MIR Lab</a>.
+                      <a href="https://yj-yu.github.io/home/">Professor Yu</a>. 
+                      
+                      I am currently a visiting student with Prof. <a href="https://www.laszlojeni.com/">Laszlo A. Jeni</a> at <a href="https://laszlojeni.com/index.html#lab">CUBE lab</a>, CMU. 
+                      
                       I received my B.S. in
                       <a href="https://yonsei.elsevierpure.com/en/organisations/department-of-electrical-and-electronic-engineering">
                         Electrical and Electronic Engineering
                       </a>
-                      from Yonsei University as well.
+                      from Yonsei University.
                     </p>
 
                     <p style="text-align:center;">
